-- ?? --
* fixed remarks on intel's toolchain.
* added real-time timer showing time elapsed since its start.

-- v0.6.0 --
* likely.hpp implements compiler huristics for branches.
* added FunctionName.hpp with macro wrapping and setting SYSTEM_FUNCTION_NAME macro to return pretty-function name, when possible and funciton name as a fallback.
* added location inforamtion for all exception classes (new c-tor has been added).
* exceptions can now return their name (via RTTI) with getTypeName().
* fixed Backtrace's tests (tail-recursion on newer gcc versions).
* fixed race condition when initializing Singleton from multiple threads.
* Singleton is now Phoenix/Mayer's Singleton with thread-safe initialization and release.
* AtExit now allows registering new handlers from another handler (while executing).
* build_process v1.3.0 introduced.

-- v0.5.0 --
* *Enum::toInt() is now standard.
* exceptions thrown by library are slightly more verbose now.
* updated Auto* classes to allow "regular" copying as atuo_ptr<> does, in all situations.
* fixed resource leaks in ssignemnt for AutoVariable.
* providede Backtrace for clearting stack backtraces (usefull for exceptions).
* added Exceptions::* for creating own exceptions easily.

-- v0.4.3 --
* fixed convention in Exception.
* begin(), end(), size() are now static.
* fixed warning in assert in IterableEnum<> on some compilers.
* build_process v0.6.0 introduced.
* removed extra link reference to boost::threads.