@@ -1,6 +1,9 @@
 -- ?? --
 * fixed remarks on intel's toolchain.
 * added real-time timer showing time elapsed since its start.
+* implemented helper for registration handlers for signals.
+* file opening uses now O_CLOEXEC flag by default.
+* implemented SharedPtrNotNULL template - boost::shred_ptr<> equivalent, that ensures that pointer is NOT NULL.
 
 -- v0.6.0 --
 * likely.hpp implements compiler huristics for branches.
